--- a/app/tracker/blueprints/sense/templates/sense/sense-relations-history.html
+++ b/app/tracker/blueprints/sense/templates/sense/sense-relations-history.html
@@ -95,15 +95,15 @@
                                 <th colspan="2" class="text-center" scope="colgroup">Target Sense</th>
                             </tr>
                             <tr>
-                                <th scope="col" class="col-header">#</th>
+                                <th scope="col" class="col-header">Revision</th>
                                 <th scope="col" class="col-header">Audit Log</th>
                                 <th scope="col" class="col-header">Operation</th>
                                 <th scope="col" class="col-header">ID</th>
-                                <th scope="col" class="col-header">Unitstr</th>
+                                <th scope="col" class="col-header">Lemma</th>
                                 <th scope="col" class="col-header">ID</th>
                                 <th scope="col" class="col-header">Name</th>
                                 <th scope="col" class="col-header">ID</th>
-                                <th scope="col" class="col-header">Unitstr</th>
+                                <th scope="col" class="col-header">Lemma</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -115,14 +115,13 @@
                                  {% elif r['operation'] == 2 %}
                                     <tr class="danger">
                                  {% endif %}
-                            <td>{{ r['timestamp'] }}</td>
+                            <td>{{ r['rev_id'] }}</td>
                             <td>
                                 <div class="text-center small-log bold-log">
                                     {{ r['editor'] }}
                                 </div>
                                 <div class="text-center small-log">
-                                    <time class="short-date"
-                                          data-datetime="{{ r['timestamp'] }}">{{ r['timestamp'] }}</time>
+                                    {{ r['datetime'] }}
                                 </div>
                             </td>
                             <td><div class="text-center">
