--- a/app/tracker/blueprints/synset/templates/synset/synset-history.html
+++ b/app/tracker/blueprints/synset/templates/synset/synset-history.html
@@ -58,41 +58,42 @@
                     <div class="table-responsive">
                         <table class="table table-bordered table-condensed table-hover table-striped">
                             <thead>
-                            <colgroup span="3"></colgroup>
-                            <colgroup span="2"></colgroup>
-                            <colgroup span="2"></colgroup>
                             <tr>
-                                <th colspan="3" class="text-center" scope="colgroup">Operation</th>
-                                <th colspan="2" class="text-center" scope="colgroup">Synset</th>
+                                <th rowspan="2" class="text-center" scope="colgroup">Revision</th>
+                                <th rowspan="2" class="text-center" scope="colgroup">Audit Log</th>
+                                <th rowspan="2" class="text-center" scope="colgroup">Operation</th>
+                                <th colspan="5" class="text-center" scope="colgroup">Synset</th>
                             </tr>
                             <tr>
-                                <th scope="col" class="col-header">#</th>
-                                <th scope="col" class="col-header">Audit Log</th>
-                                <th scope="col" class="col-header">Operation</th>
                                 <th scope="col" class="col-header">ID</th>
                                 <th scope="col" class="col-header">Units</th>
+                                <th scope="col" class="col-header">Abstract</th>
+                                <th scope="col" class="col-header">Lexicon</th>
+                                <th scope="col" class="col-header">Status</th>
                             </tr>
                             </thead>
                             <tbody>
                             {% for synset in synsets['synsets'] %}
                                 {% if synset['operation'] == 1 %}
                                     <tr class="info">
+                                    {% set rowsp = 2 %}
                                 {% elif synset['operation'] == 0 %}
                                     <tr class="success">
+                                    {% set rowsp = 1 %}
                                 {% elif synset['operation'] == 2 %}
                                     <tr class="danger">
+                                    {% set rowsp = 1 %}
                                 {% endif %}
-                            <td>{{ synset['timestamp'] }}</td>
-                            <td>
-                            <div class="text-center small-log bold-log">
-                            {{ synset['editor'] }}
+                            <td rowspan="{{ rowsp }}">{{ synset['rev_id'] }}</td>
+                            <td rowspan="{{ rowsp }}">
+                                <div class="text-center small-log bold-log">
+                                    {{ synset['editor'] }}
                                 </div>
                                 <div class="text-center small-log">
-                                <time class="short-date"
-                                      data-datetime="{{ synset['timestamp'] }}">{{ synset['timestamp'] }}</time>
-                                    </div>
+                                    {{ synset['datetime'] }}
+                                </div>
                             </td>
-                            <td>
+                            <td rowspan="{{ rowsp }}">
                             <div class="text-center">
                                 {% if synset['operation'] == 1 %}
                                     <span class="label label-info">Modified</span>
@@ -103,15 +104,43 @@
                                 {% endif %}
                             </div>
                             </td>
-                            <td>
+                            <td rowspan="{{ rowsp }}">
                                 <a href="{{ url_for('synset.synset_by_id', id=synset['id']) }}"> {{ synset['id'] }}</a>
                             </td>
-                            <td>
+                            <td rowspan="{{ rowsp }}">
                                 {% if "unit_strings" in synset %}
                                     {{ synset['unit_strings'] }}
                                 {% endif %}
                             </td>
+
+                            {%  if rowsp == 2 %}
+                                {% set st_bg ="style=background-color:#EEE"  %}
+                            {%  else %}
+                                {% set st_bg=''  %}
+                            {% endif %}
+                            <td {{ st_bg }}>
+                                {% if "abstract" in synset %}
+                                    {{ synset['abstract'] }}
+                                {% endif %}
+                            </td>
+                            <td {{ st_bg }}>
+                                {% if "lexicon" in synset %}
+                                    {{ synset['lexicon'] }}
+                                {% endif %}
+                            </td>
+                            <td {{ st_bg }}>
+                                {% if "status" in synset %}
+                                    <span class="label {{ status[synset['status']|string]['tag'] }}">{{ status[synset['status']|string]['value']}}</span>
+                                {% endif %}
+                            </td>
                             </tr>
+                                {% if rowsp == 2 %}
+                                    <tr>
+                                        <td class="info">{% if "before_abstract" in synset %} {{ synset['before_abstract'] }} {% endif %}</td>
+                                        <td class="info">{% if "before_lexicon" in synset %} {{ synset['before_lexicon'] }} {% endif %}</td>
+                                        <td class="info">{% if "before_status" in synset %} <span class="label {{ status[synset['before_status']|string]['tag'] }}">{{ status[synset['before_status']|string]['value']}}</span> {% endif %}</td>
+                                    </tr>
+                                {% endif %}
                             {% endfor %}
                             </tbody>
                         </table>
