--- a/app/tracker/templates/layouts/app.html
+++ b/app/tracker/templates/layouts/app.html
@@ -94,6 +94,9 @@
                         </ul>
                     </li>
                     <li>
+                        <a href={{ url_for('emotion.emotional_annotation') }}><i class="fa fa-deviantart fa-fw"></i> Emotional annotation</a>
+                    </li>
+                    <li>
                         <a href="#"><i class="fa fa-users fa-fw"></i> Users</a>
                         <ul class="nav nav-second-level">
                             <li>
